// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimelineQueueButtonHeader /> renders correctly 1`] = `
<div
  className="timeline-queue-header hidden"
>
  <a
    className="timeline-queue-header__btn"
    onClick={[Function]}
  >
    <div
      className="svg-icon"
    >
      <svg
        id={
          Object {
            "process": [Function],
          }
        }
      />
    </div>
  </a>
</div>
`;

exports[`<TimelineQueueButtonHeader /> renders correctly 2`] = `
<div
  className="timeline-queue-header hidden"
>
  <a
    className="timeline-queue-header__btn"
    onClick={[Function]}
  >
    <div
      className="svg-icon"
    >
      <svg
        id={
          Object {
            "process": [Function],
          }
        }
      />
    </div>
    <div
      className="timeline-queue-header__label"
    >
      Click to see 1 new post
    </div>
  </a>
</div>
`;

exports[`<TimelineQueueButtonHeader /> renders correctly 3`] = `
<div
  className="timeline-queue-header hidden"
>
  <a
    className="timeline-queue-header__btn"
    onClick={[Function]}
  >
    <div
      className="svg-icon"
    >
      <svg
        id={
          Object {
            "process": [Function],
          }
        }
      />
    </div>
    <div
      className="timeline-queue-header__label"
    >
      Click to see 9999999 new posts
    </div>
  </a>
</div>
`;
